--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 			<main class="main-block__main-content">
 				<h1 class="main-block__heading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, voluptatibus.</h1>
 				<p class="main-block__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam expedita dolores reiciendis fuga vero similique quos ut veritatis magnam praesentium nemo deserunt, ipsa illum labore omnis nam tenetur, adipisci alias.</p>
+				<p class="main-block__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam expedita dolores reiciendis fuga vero similique quos ut veritatis magnam praesentium nemo deserunt, ipsa illum labore omnis nam tenetur, adipisci alias.</p>
+				<p class="main-block__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam expedita dolores reiciendis fuga vero similique quos ut veritatis magnam praesentium nemo deserunt, ipsa illum labore omnis nam tenetur, adipisci alias.</p>
+				<p class="main-block__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam expedita dolores reiciendis fuga vero similique quos ut veritatis magnam praesentium nemo deserunt, ipsa illum labore omnis nam tenetur, adipisci alias.</p>
 			</main>
 		</section>
 	</div>
